[gd_scene load_steps=9 format=3 uid="uid://b4xuywh4p43rg"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_tmq2p"]
[ext_resource type="PackedScene" uid="uid://ds7ykkgiff777" path="res://scenes/enemy/health.tscn" id="2_ijk62"]
[ext_resource type="PackedScene" uid="uid://cxwvi5g4114j" path="res://scenes/components/hit_box.tscn" id="3_b5k6d"]
[ext_resource type="PackedScene" uid="uid://b7wko4cw1lo5y" path="res://scenes/components/damage_box.tscn" id="4_fna7c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4avt"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0keu"]
size = Vector2(18, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjtxj"]
size = Vector2(26, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14hjt"]
size = Vector2(20, 16)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 8.0
script = ExtResource("1_tmq2p")
SPEED = 100.0

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 0.180392, 0.180392, 1)
polygon = PackedVector2Array(-12, -12, 12, -12, 12, 8, -12, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q4avt")

[node name="DeathDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDetector"]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_j0keu")

[node name="StunTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="Health" parent="." instance=ExtResource("2_ijk62")]
MAX_HEALTH = 5

[node name="HitBox" parent="." instance=ExtResource("3_b5k6d")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_kjtxj")

[node name="DamageBox" parent="." instance=ExtResource("4_fna7c")]
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
shape = SubResource("RectangleShape2D_14hjt")

[connection signal="body_entered" from="DeathDetector" to="." method="_on_death_detector_body_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="damage_applied" from="Health" to="." method="_on_damage_applied"]
[connection signal="died" from="Health" to="." method="_on_health_died"]
[connection signal="damage_taken" from="HitBox" to="Health" method="apply_damage"]
[connection signal="hazard" from="HitBox" to="." method="_on_hit_box_hazard"]
